--- a/app/src/main/res/layout/layout_loading_view.xml
+++ b/app/src/main/res/layout/layout_loading_view.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/loading_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ProgressBar
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
-
-    <TextView
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/spin_kit"
+        style="@style/SpinKitView.ChasingDots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:text="@string/loading"
-        android:textColor="@color/common_color" />
+        android:layout_gravity="center"
+        android:padding="@dimen/dp_16"
+        app:SpinKit_Color="@color/colorAccent" />
 
 </LinearLayout>
