--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,10 @@
             android:id="@+id/floating_action_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_marginBottom="@dimen/dp_60"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_60"
             app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScaleDownShowBehavior"
             app:srcCompat="@drawable/ic_arrow_upward_white_24dp" />
 
