--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="@dimen/dp_20"
         android:layout_marginRight="@dimen/dp_20"
         android:layout_marginBottom="@dimen/dp_60"
-        app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScaleDownShowBehavior"
+        app:layout_behavior="com.cxz.wanandroid.widget.behavior.ScrollAwareFABBehavior"
         app:srcCompat="@drawable/ic_add_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
