--- a/app/src/main/res/layout/item_sticky_header.xml
+++ b/app/src/main/res/layout/item_sticky_header.xml
@@ -14,7 +14,7 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:textColor="@color/item_date"
+        android:textColor="@color/colorAccent"
         android:textSize="@dimen/item_tv_date"
         tools:text="@string/app_name" />
 
