--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,10 +8,14 @@
     <attr name="viewBackground" format="color" />
 
     <declare-styleable name="CircleImageView">
-        <attr name="type" />
-        <attr name="borderColor" />
-        <attr name="borderWidth" />
-        <attr name="rectRoundRadius" />
+        <attr name="type" format="enum">
+            <enum name="none" value="0" />
+            <enum name="circle" value="1" />
+            <enum name="rect_rounded" value="2" />
+        </attr>
+        <attr name="borderColor" format="color" />
+        <attr name="borderWidth" format="dimension" />
+        <attr name="rectRoundRadius" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="IconListPreference">
