--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -37,10 +37,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarSize="@dimen/dp_10"
-            android:scrollbars="vertical" />
+            style="@style/RecyclerViewStyle" />
+
     </LinearLayout>
 
 </com.cxz.multiplestatusview.MultipleStatusView>
