--- a/app/src/main/res/layout/fragment_refresh_layout.xml
+++ b/app/src/main/res/layout/fragment_refresh_layout.xml
@@ -18,10 +18,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarSize="@dimen/dp_10"
-            android:scrollbars="vertical"
+            style="@style/RecyclerViewStyle"
             tools:listitem="@layout/item_home_list" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
