--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:id="@+id/other">
+
+        <item
+            android:id="@+id/nav_score"
+            android:icon="@drawable/ic_score_white_24dp"
+            android:title="@string/nav_my_score"
+            app:actionViewClass="android.widget.TextView" />
 
         <item
             android:id="@+id/nav_collect"
